--- a/Java-Spring/contador_de_visitas/pom.xml
+++ b/Java-Spring/contador_de_visitas/pom.xml
@@ -5,14 +5,14 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.5.7</version>
+		<version>4.0.0</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.oct2025</groupId>
-	<artifactId>tiendavideojuegos</artifactId>
+	<groupId>com.fabiola</groupId>
+	<artifactId>contador_de_visitas</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>tiendavideojuegos</name>
-	<description>Proyecto Tienda de VideoJuegos - oct 2025</description>
+	<name>contador_de_visitas</name>
+	<description>Actividad Práctica Skillnest</description>
 	<url/>
 	<licenses>
 		<license/>
@@ -27,22 +27,28 @@
 		<url/>
 	</scm>
 	<properties>
-		<java.version>21</java.version>
+		<java.version>17</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
+			<artifactId>spring-boot-starter-webmvc</artifactId>
 		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
+			<artifactId>spring-boot-devtools</artifactId>
+			<scope>runtime</scope>
+			<optional>true</optional>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.tomcat.embed</groupId>
-			<artifactId>tomcat-embed-jasper</artifactId>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-webmvc-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+			<dependency>
+       		<groupId>org.apache.tomcat.embed</groupId>
+       		<artifactId>tomcat-embed-jasper</artifactId>
 		</dependency>
 
 		<dependency>
@@ -54,28 +60,6 @@
            <groupId>org.glassfish.web</groupId>
            <artifactId>jakarta.servlet.jsp.jstl</artifactId>
 		</dependency>
-
-		<!--BASE DE DATOS-->
-		<dependency>
-	<groupId>com.mysql</groupId>
-	<artifactId>mysql-connector-j</artifactId>
-	<scope>runtime</scope>
-</dependency>
-<dependency>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter</artifactId>
-</dependency>
-<dependency>
-	<groupId>org.springframework.boot</groupId>
-	<artifactId>spring-boot-starter-data-jpa</artifactId>
-</dependency>
-
-<!--Validaciones-->
-<dependency>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-validation</artifactId>
-</dependency>
-	
 	</dependencies>
 
 	<build>
