actualizacion del proyecto tiendaVideoJuego, relación mucho a muchos y Actividad Práctica estudiante_cursos realizada

--- a/Java-Spring/estudiantes_cursos/src/main/resources/application.properties
+++ b/Java-Spring/estudiantes_cursos/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.application.name=tiendavideojuegos
+spring.application.name=estudiantes_cursos
 spring.output.ansi.enabled=always
 
 spring.mvc.view.prefix=/WEB-INF/
 
-spring.datasource.url=jdbc:mysql://localhost:3306/videojuegos_db
+spring.datasource.url=jdbc:mysql://localhost:3306/estudiantes_cursos_db
 spring.datasource.username=root
 spring.datasource.password=admin123
 spring.jpa.hibernate.ddl-auto=update
